# demokit

./: .codecov.yml  .gitattributes  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
demokit/: __init__.py  _version.py  demokit.py
demokit/data/: files.py
demokit/tests/: conftest.py  test_demokit.py
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst  references.bib
